add: 修改不规范代码、添加返回柜机类型